--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
+              <h3 class="masthead-brand">SafeCollab</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
@@ -44,16 +44,16 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+            <h1 class="cover-heading">We believe in secure information exchange.</h1>
+            <p class="lead">Share information conveniently as a reporter. Upload files that you can encrypt and share with people you trust.
+              <p class="lead">
+              <a href="#" class="btn btn-lg btn-default">Sign Up</a>
             </p>
           </div>
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+              <p>Built for UVA's CS 3240 Software Engineering course.</p>
             </div>
           </div>
 
