--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">We believe in secure information exchange.</h1>
-            <p class="lead">Share information conveniently as a reporter. Upload files that you can encrypt and share with people you trust.
+            <h1 class="cover-heading">Secure information exchange.</h1>
+            <p class="lead">Share information conveniently as a reporter. Upload files that you can encrypt and share them with people you trust.
               <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Sign Up</a>
             </p>
