--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,9 @@
               <h3 class="masthead-brand">SafeCollab</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#">Home</a></li>
                   <li><a href="#">Features</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li class="active"><a href="contact.html">Contact</a></li>
                 </ul>
               </nav>
             </div>
