--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
               <h3 class="masthead-brand">SafeCollab</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="#">Home</a></li>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="#">Features</a></li>
                   <li class="active"><a href="contact.html">Contact</a></li>
                 </ul>
