--- a/contact.html
+++ b/contact.html
@@ -46,17 +46,17 @@
           <div class="inner cover">
             <div class="row">
              <div class="col-lg-4">
-               <img class="img-circle" src="images/stick.jpg" alt="Generic placeholder image" width="140" height="140">
+               <img class="img-circle" src="images/person1.jpg" alt="Generic placeholder image" width="140" height="140">
                <h2>Abhishek Gupta</h2>
                <p>Hi, I'm a developer!</p>
              </div><!-- /.col-lg-4 -->
              <div class="col-lg-4">
-               <img class="img-circle" src="images/stick.jpg" alt="Generic placeholder image" width="140" height="140">
+               <img class="img-circle" src="images/person2.jpg" alt="Generic placeholder image" width="140" height="140">
                <h2>Jonathan Li</h2>
                <p>Me too!</p>
              </div><!-- /.col-lg-4 -->
              <div class="col-lg-4">
-               <img class="img-circle" src="images/stick.jpg" alt="Generic placeholder image" width="140" height="140">
+               <img class="img-circle" src="images/person3.jpg" alt="Generic placeholder image" width="140" height="140">
                <h2>Steven Jenny</h2>
                <p>Me three!</p>
              </div><!-- /.col-lg-4 -->
